# xy_web_settings

./: .gitignore  .xy-codehub-ci.yml  MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
test/: main.py  xy_web.toml
xy_web_settings/: Mode.py  ModuleData.py  Settings.py  __init__.py
xy_web_settings/Section/: Section.py
xy_web_settings/Section/Admin/: Admin.py
xy_web_settings/Section/Backup/: Backup.py
xy_web_settings/Section/Database/: Database.py
xy_web_settings/Section/Development/: Development.py
xy_web_settings/Section/Log/: Log.py
xy_web_settings/Section/Nginx/: Nginx.py
xy_web_settings/Section/Resource/: Resource.py
xy_web_settings/Section/Server/: Server.py
xy_web_settings/Section/Site/: Site.py
xy_web_settings/Section/Source/: Source.py
xy_web_settings/Section/Workspace/: Workspace.py
xy_web_settings/data/template/config/full/: settings_toml.template
xy_web_settings/data/template/config/simple/: settings_toml.template
